containments/desktop: Store Folder View configuration paths relative to desktop

The Folder View widget currently shows .desktop files' filenames instead of
desktop entries' Name properties when using a user-specified path.

This commit fixes that issue by converting all file:// paths below the desktop
to relative ones using the desktop:// scheme.

BUG: 458400
FIXED-IN: 6.2.0